--- a/ass_task-1.html
+++ b/ass_task-1.html
@@ -6,7 +6,7 @@
     <title>TASK-1</title>
 </head>
 <body>
-    <table border="2" cellpadding="20" cellspacing="0" bordercolor="white" bgcolor="DodgerBlue" height="150" width="50%">
+    <table border="2" cellpadding="20" cellspacing="0" bordercolor="white" bgcolor="powderblue" height="150" width="50%">
         <caption>table tittle</caption>
         <tr>
             <th>First Name</th> 
