--- a/index.html
+++ b/index.html
@@ -19,51 +19,51 @@
             
             <tr>
                 <td>Task1</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-1.html">Link1</a></td>
+                <td><a href="./ass_task-1.html">Link1</a></td>
             </tr>
             <tr>
                 <td>Task2</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-2.html">Link2</a></td>
+                <td><a href="./ass_task-2.html">Link2</a></td>
             </tr>
             <tr>
                 <td>Task3</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-3.html">Link3</a></td>
+                <td><a href="./ass_task-3.html">Link3</a></td>
             </tr>
             <tr>
                 <td>Task4</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-4.html">Link4</a></td>
+                <td><a href="./ass_task-4.html">Link4</a></td>
             </tr>
             <tr>
                 <td>Task5</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-5.html">Link5</a></td>
+                <td><a href="./ass_task-5.html">Link5</a></td>
             </tr>
             <tr>
                 <td>Task6</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-6.html">Link6</a></td>
+                <td><a href="./ass_task-6.html">Link6</a></td>
             </tr>
             <tr>
                 <td>Task7</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-7.html">Link7</a></td>
+                <td><a href="./ass_task-7.html">Link7</a></td>
             </tr>
             <tr>
                 <td>Task8</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-8.html">Link8</a></td>
+                <td><a href="./ass_task-8.html">Link8</a></td>
             </tr>
             <tr>
                 <td>Task9</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-9.html">Link9</a></td>
+                <td><a href="./ass_task-9.html">Link9</a></td>
             </tr>
             <tr>
                 <td>Task10</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-10.html">Link10</a></td>
+                <td><a href="./ass_task-10.html">Link10</a></td>
             </tr>
             <tr>
                 <td>Task11</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-11.html">Link11</a></td>
+                <td><a href="./ass_task-11.html">Link11</a></td>
             </tr>
             <tr>
                 <td>Task12</td>
-                <td><a href="http://127.0.0.1:5500/ass_task-12.html">Link12</a></td>
+                <td><a href="./ass_task-12.html">Link12</a></td>
             </tr>
         </table>
     </center>
