--- a/ass_task-6.html
+++ b/ass_task-6.html
@@ -70,7 +70,7 @@
            width: 80px;
            height: 50px;
            border: 3px solid rgb(129, 222, 35);
-           border-radius: 120px/70px;
+           border-radius: 50%;
         }
         .shape8{
            width: 80px;
@@ -82,7 +82,9 @@
            width: 80px;
            height: 50px;
            border: 3px solid rgb(129, 222, 35);
-           
+           border-radius: 0 20px 0 20px;
+           -moz-border-radius: 0 20px 0 20px;
+           -webkit-border-radius:  0 20px 0 20px;
         }
     </style>
 </head>
